"""
    Bazel module test for raylib.
"""

module(
    name = "raylib_sandbox",
)

# Raylib Library:
bazel_dep(name = "raylib-bazel")
archive_override(
    module_name = "raylib-bazel",
    strip_prefix = "raylib-bazel-main",
    urls = "https://github.com/jeh15/raylib-bazel/archive/refs/heads/main.zip",
)

# cJSON Library:
bazel_dep(name = "cjson-bazel")
archive_override(
    module_name = "cjson-bazel",
    strip_prefix = "cJSON-bazel-main",
    urls = "https://github.com/jeh15/cJSON-bazel/archive/refs/heads/main.zip",
)

# Autocomplete for Bazel:
# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "a14ad3a64e7bf398ab48105aaa0348e032ac87f8",
)