cc_binary(
    name = "main",
    srcs = ["main.c"],
    data = [
        "//assets/ninja_adventure_assets/Actor/Characters/NinjaGreen:ninja_green_assets",
    ],
    deps = [
        "@raylib-bazel//:raylib",
    ],
)

cc_binary(
    name = "test",
    srcs = ["test.c"],
    data = [
        "//src/maps:json_maps",
    ],
    deps = [
        "@cjson-bazel//:cJSON",
    ],
)