link_options = select({
    "@bazel_tools//src/conditions:darwin": [
        "-undefined dynamic_lookup",
    ],
    "//conditions:default": [],
})

copts = select({
    "@bazel_tools//src/conditions:darwin": [
        "-fPIC",
    ],
    "//conditions:default": [],
})


cc_binary(
    name = "main",
    srcs = ["main.c"],
    data = [
        "//assets/ninja_adventure_assets/Actor/Characters/NinjaGreen:ninja_green_assets",
        "//assets/ninja_adventure_assets/Backgrounds/Tilesets:tilesets",
    ],
    deps = [
        "@raylib-bazel//:raylib",
        "@cjson-bazel//:cJSON",
        "//src/utils:parse_utils",
    ],
)

cc_binary(
    name = "test",
    srcs = ["test.c"],
    data = [
        "//src/maps:json_maps",
    ],
    deps = [
        "@cjson-bazel//:cJSON",
        "//src/utils:parse_utils",
    ],
)