cc_library(
    name = "parse_utils",
    srcs = ["parse_utils.c"],
    hdrs = ["parse_utils.h"],
    deps = [
        "@cjson-bazel//:cJSON",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "map_utils",
    srcs = ["map_utils.c"],
    hdrs = ["map_utils.h"],
    deps = [
        "@cjson-bazel//:cJSON",
        ":parse_utils",
    ],
    visibility = ["//visibility:public"],
)